--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,11 @@
 body{
-    background-color: #212121;
+    background-color: #31823c;
+    color: aliceblue;
 }
 .header{
     height: 56px;
     width: 100%;
-    background-color: black;
+    background-color: rgb(198, 31, 31);
 }
 .container{
     
@@ -20,11 +21,10 @@ body{
     height: 650px;
     background-color: cornflowerblue;
 }
-.container__shop{
-    width: 100%;
-    height: 650px;
- background-color: coral;
-}
+
+
+
+
 .footer{
     height: 340px;
     width: 100%;
