--- a/css/truong.css
+++ b/css/truong.css
@@ -5,7 +5,7 @@
     text-decoration: none;
 }
 .header{
-    height: 80px;
+    height: 65px;
     width: 100%;
     display: block;
     background-color: black;
@@ -29,14 +29,14 @@
     vertical-align: middle;
     font-family: 'Montserrat';
     font-size: 32px;
-    font-weight: 200;
+    font-weight: 800;
 }
 .header__inner--logo h1 span{
-    background-color: goldenrod;
-    color: black;
-    font-weight: 800;
-    padding: 0px 5px;
-    border-radius: 10%;
+    /* background-color: goldenrod;
+    color: black; */
+    font-weight: 100;
+    /* padding: 0px 5px;
+    border-radius: 10%; */
 }
 .header__inner--navigation{
     float: right;
@@ -58,7 +58,7 @@
     color: white;
     font-family: 'Montserrat';
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 500;
 }
 .header__inner--navigation a li try{
     height: 100%;
@@ -95,4 +95,7 @@
         display: none;
     }
 }
-
+.header__inner--navigation li:hover{
+    opacity: 0.8;
+    cursor: pointer;
+}
