--- a/css/truong.css
+++ b/css/truong.css
@@ -4,6 +4,17 @@
     list-style: none;
     text-decoration: none;
 }
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000; /* Số càng lớn, phần tử càng hiển thị trên đỉnh các phần tử khác */
+    background-color: #000000;
+}
+
+/* Các quy tắc khác cho header, ví dụ như height, color, etc. */
+
 .header{
     height: 80px;
     width: 100%;
@@ -28,13 +39,13 @@
     display: table-cell;
     vertical-align: middle;
     font-family: 'Montserrat';
-    font-size: 32px;
-    font-weight: 200;
+    font-size: 40px;
+    font-weight: 800;
 }
 .header__inner--logo h1 span{
-    background-color: goldenrod;
-    color: black;
-    font-weight: 800;
+    /* background-color: goldenrod; */
+    /* color: black; */
+    font-weight: 400;
     padding: 0px 5px;
     border-radius: 10%;
 }
@@ -58,16 +69,12 @@
     color: white;
     font-family: 'Montserrat';
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 500;
 }
 .header__inner--navigation a li try{
     height: 100%;
     width: 100%;
     padding: 15px 15px;
-    background-color: goldenrod;
-}
-.header__inner--navigation a li menu{
-    padding: 15px 20px;
     background-color: goldenrod;
 }
 @media screen and (max-width: 999px) {
