--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #31823c;
+    background-color: #212121;
     color: aliceblue;
 }
 .header{
@@ -8,13 +8,13 @@ body{
     background-color: rgb(198, 31, 31);
 }
 .container{
-    
+    margin-top: 65px;
 }
 
 .container__home{
     width: 100%;
-    height: 650px;
-    background-color: darkmagenta;
+    height: 645px;
+    /* background-color: darkmagenta; */
 }
 .container__service{
     width: 100%;
