--- a/css/index.css
+++ b/css/index.css
@@ -111,5 +111,5 @@ body{
     padding-top: 35px;
     height: 340px;
     width: 100%;
-    background-color: #A50000;
+    background-color: #000000;
 }
