--- a/css/truong.css
+++ b/css/truong.css
@@ -28,12 +28,12 @@
     margin: 0 auto;
     /* background-color: green; */
 }
-.header__inner--logo{
+.header__inner__logo{
     height: 100%;
     display: table;
     float: left;
 }
-.header__inner--logo h1{
+.header__inner__logo h1{
     color: white;
     height: 100%;
     display: table-cell;
@@ -42,27 +42,27 @@
     font-size: 32px;
     font-weight: 800;
 }
-.header__inner--logo h1 span{
+.header__inner__logo h1 span{
     /* background-color: goldenrod;
     color: black; */
     font-weight: 100;
     /* padding: 0px 5px;
     border-radius: 10%; */
 }
-.header__inner--navigation{
+.header__inner__navigation{
     float: right;
     height: 100%;
 }
-.header__inner--navigation a{
+.header__inner__navigation a{
     height: 100%;
     display: table;
     float: left;
     padding: 0px 20px;
 }
-.header__inner--navigation a:last-child{
+.header__inner__navigation a:last-child{
     padding-right: 0px;
 }
-.header__inner--navigation a li{
+.header__inner__navigation a li{
     display: table-cell;
     vertical-align: middle;
     height: 100%;
@@ -71,38 +71,67 @@
     font-size: 14px;
     font-weight: 500;
 }
-.header__inner--navigation a li try{
+.header__inner__navigation a li try{
     height: 100%;
     width: 100%;
     padding: 15px 15px;
-    background-color: goldenrod;
+    background-color: gold;
+    color: black;
 }
 @media screen and (max-width: 999px) {
-    .header__inner--navigation a li home{
+    .header__inner__navigation a li home{
         display: none;
     }
 }
 @media screen and (max-width: 869px) {
-    .header__inner--navigation a li forum{
+    .header__inner__navigation a li forum{
         display: none;
     }
 }
 @media screen and (max-width: 788px) {
-    .header__inner--navigation a li sv{
+    .header__inner__navigation a li sv{
         display: none;
     }
 }
 @media screen and (max-width: 719px) {
-    .header__inner--navigation a li pro{
+    .header__inner__navigation a li pro{
         display: none;
     }
 }
 @media screen and (max-width: 616px) {
-    .header__inner--navigation a li try{
+    .header__inner__navigation a li try{
         display: none;
     }
 }
-.header__inner--navigation li:hover{
+.header__inner__navigation li:hover{
     opacity: 0.8;
     cursor: pointer;
+}
+.header__inner__logo h1:hover{
+    color: goldenrod;
+    cursor: pointer;
+}
+
+
+
+.submenu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+    background-color: #f1f1f1;
+}
+
+.submenu li {
+    position: relative;
+    padding: 12px 16px;
+}
+
+.submenu li:hover {
+    background-color: #ddd;
+}
+
+.header__inner__navigation li:hover .submenu {
+    display: block;
 }
