--- a/css/van.css
+++ b/css/van.css
@@ -9,9 +9,10 @@
 .grid__column-4{
     padding-left: 5px;
     padding-right: 5px;
-    width: 25%;
+    width: 20%;
 }
 .footer__heading{
+    line-height: 24px;
     font-size: 1.8rem;
     text-transform: uppercase;
     padding-bottom: 20px;
@@ -36,4 +37,8 @@
 }
 .footer-list-1{
     display: flex;
+}
+
+.grid__column-4{
+    margin-left:20px;
 }
