--- a/css/truong.css
+++ b/css/truong.css
@@ -88,6 +88,7 @@
     position: relative;
     display: block;
     padding: 30px 15px;
+    /* margin-right: 15px; */
 }
 .containt a{
     left: 0;
@@ -110,7 +111,7 @@
 }
 .containt{
     margin-left: auto;
-    box-shadow: 5px 5px 5px 1px rgb(17, 17, 17);
+    /* box-shadow: 5px 5px 5px 1px rgb(17, 17, 17); */
 }
 .header__inner__menu{
     padding: 15px 15px;
@@ -169,4 +170,34 @@
         opacity: 1;
         scale: 1;
     }
-  }
+}
+@keyframes quayxuong{
+    50% {
+        transform: rotate(Odeg);
+    }
+    100% {
+        transform: rotate(90deg);
+        margin-left: 2px;
+    }
+}
+.bx{
+    
+    margin-left: 2px;
+    scale: 0.6;
+}
+.dropdown:hover .bx {
+    animation: quayxuong 0.4s forwards;
+    color: goldenrod;
+}
+.containt2{
+    /* display: none; */
+    position: relative;
+    right: 100%;
+    background-color: #000;
+}
+.dropdown2 li a{
+    position: absolute;
+}
+.dropdown2:hover .containt2{
+    display: block;
+}
