--- a/css/truong.css
+++ b/css/truong.css
@@ -101,9 +101,12 @@
     background-color: black;
     position: absolute;
     top: 100%;
+    opacity: 0;
+
 }
 .dropdown:hover .containt{
     display: block;
+    animation: hienlen 0.3s ease-in-out forwards;
 }
 .containt a:hover{
     background-color: rgb(22, 22, 22);
@@ -146,6 +149,16 @@
 .header__inner__menu:hover .header__inner__navigation2{
     display: block;
 }
+@keyframes hienlen {
+    from {
+        top: 120%;
+        opacity: 0;
+    }
+    to {
+        top: 100%;
+        opacity: 1;
+    }
+  }
 @media screen and (max-width: 850px) { 
     .header__inner__navigation{
         display: none;
