--- a/css/van.css
+++ b/css/van.css
@@ -1,20 +1,32 @@
+.body{
+    font-family: 'Overpass';
+}
 .footer{
+
     padding-top: 35px;
-    height: 340px;
+    /* height: 340px; */
     width: 100%;
     background-color: #000000;
     /* margin-left: 160px;
     max-width: 1230px; */
     /* text-align: center; */
 }
+
+
+.grid__row{
+    display: flex;
+    /* flex-direction: column; */
+}
+
 *{
     color: aliceblue;
 }
 .grid__column-4{
+    flex: 1;
     padding-left: 5px;
     padding-right: 5px;
-    width: 25%;
-
+    /* width: 25%; */
+    margin: 0 20px;
 }
 .footer__heading{
     line-height: 24px;
@@ -44,9 +56,9 @@
     display: flex;
 }
 
-.grid__column-4{
-    margin-left:20px;
-}
-.body{
-    font-family: 'Overpass';
+
+.grid__column-4:last-child ul{
+    display: flex;
+    justify-content: center;
+    width: 126px;
 }
