--- a/css/quyen.css
+++ b/css/quyen.css
@@ -1,12 +1,15 @@
 .container__home {
+    z-index: 9;
     display: flex;
-    /* align-items: center; */
     justify-content: flex-start;
     background-image: url(../img/back_gr_home.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     position: relative;
+    border-bottom: .1px solid rgba(124, 136, 136, 0.4);
+    box-shadow: 0px 26px 26px 22px rgba(59, 59, 59, 1);
+      
 }
 
 
