--- a/css/tu.css
+++ b/css/tu.css
@@ -1,11 +1,12 @@
 .container__service{
-    margin-top: 50px;
+    margin-top: 22px;
     background: linear-gradient(#212121d1, #212121d1),
     url("https://img4.thuthuatphanmem.vn/uploads/2021/01/07/background-phong-tap-gym_035832535.jpg");
     color: white;
     background-size: cover;
     position: relative;
     text-align: center;
+    padding: 0 8px;
 }
 .container__service__title{
     width: 100%;
@@ -17,40 +18,85 @@
 .container__service__title:hover{
     color: pink;
 }
+
 .container__service__uses{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin-top: 12px;
+}
+.container__service__uses p{
     /* width: ; */
     line-height: 20px;
     font-size: 15px;
-    max-width:500px;
+    max-width: 600px;
+    width: 100%;
+    min-width: 300px;
     font-weight: normal;
     margin: 0px 3px;
     margin-bottom: 30px;
     text-align: center;
 }
 .container__service__img{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     width: 100%;
     height: 100%;
     /* display: inline-block; */
     margin-bottom: 50px;
     flex-wrap: wrap;
-    text-align: center;
-    
+    /* text-align: center; */
  }
 
-.container__service__img .items{
+ .service__img_row-2{
+    display: flex;
+    /* justify-content: center; */
+    max-width: max-content;
+    width: 100%;
+    min-width: 390px;
+ }
+
+ 
+ .service__img_row-2:last-child{
+    align-self: flex-end;
+ }
+
+.container__service__img__items{
     display: inline-block;
-    background: #fff;
-    padding: 20px;
+    background-color: #d5d5d5;
+    padding: 12px 12px;
+    margin-left: 15px;
+    margin-right: 15px;
     border: 1px solid #efdddd;
     margin-bottom: 50px;
     box-sizing: border-box;
+    border: 2px solid #000;
+    border-radius: 2px;
+    box-shadow: 8px 6px 18px 2px rgba(160, 160, 160, 0.3);
 }
-.container__service__img img{
-    width: 200px;
-    height: 150px;
+.container__service__img__items img{
+    max-width: 212px;
+    width: 100%;
+    min-width: 120px;
+
+    border: 2px solid #888888;
+    border-radius: 2px;
     
 }
-.container__service__img p{
+/* .service__img_row-2:last-child .container__service__img__items img{
+    max-width: 120px;
+    width: 100%;    
+    max-width: 120px;
+
+    border: 2px solid #888888;
+    border-radius: 2px;
+    
+} */
+.container__service__img__items p{
+    font-size: 1.6rem;
+    max-width: 212px;
     color: black;
     margin-top: 10px;
 }
