--- a/css/tu.css
+++ b/css/tu.css
@@ -50,15 +50,6 @@
     /* text-align: center; */
  }
 
- .service__img_row-2{
-    display: flex;
-    flex-direction: row;
-    /* justify-content: center; */
-    width: 100%;
-    max-width: 512px;
-    width: auto;
- }
-
  
  .service__img_row-2:last-child{
     /* align-self: flex-end; */
@@ -66,6 +57,7 @@
 
 .container__service__img__items{
     display: inline-block;
+    max-width: 45vw;
     padding: 12px 12px;
     margin-left: 4px;
     margin-right: 4px;
@@ -85,15 +77,6 @@
     border-radius: 2px;
     
 }
-/* .service__img_row-2:last-child .container__service__img__items img{
-    max-width: 120px;
-    width: 100%;    
-    max-width: 120px;
-
-    border: 2px solid #888888;
-    border-radius: 2px;
-    
-} */
 .container__service__img__items p{
     font-size: 1.6rem;
     max-width: 212px;
