--- a/navigation_css/chatbox.css
+++ b/navigation_css/chatbox.css
@@ -8,11 +8,15 @@
 .chatbox{
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 65px);
+    height: calc(100vh - 68px);
     max-width: 1200px;
     width: 100%;
     min-width: 300px;
-    background-color: rgba(169, 169, 169, 0.675);
+    background-color: rgba(187, 187, 187, 0.675);
+    border-radius: 4px;
+    overflow: hidden;
+    /* border: 1px solid rgba(214, 214, 214, 0.675); */
+    box-shadow: 2px 2px 8px 2px #3f3f3f ;
 }
 
 .chatbox__head{
@@ -20,7 +24,6 @@
     align-items: center;
     background-color: #3d3d3d;
     padding: 0 8px;
-    margin-top: 2px;
 }
 
 .chatbox__head__title{
@@ -69,10 +72,11 @@
 .chatbox__message__list{
     display: flex;
     flex-direction: column;
+    margin: 0 12px;
 }
 
 .chatbox__message__list:last-child{
-    margin-bottom: 8px;
+    margin-bottom: 14px;
 }
 
 
@@ -83,7 +87,7 @@
 .chatbox__message__item__text{
     display: flex;
     align-items: center;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     font-weight: 600;
     line-height: 2rem;
     width: max-content;
@@ -114,16 +118,30 @@
 .chatbox__bottom{
     display: flex;
     flex-direction: column;
-    height: 105px;
+    height: 88px;
     background-color: #3f3f3f;
+    border-top-right-radius: 8px;
+    border-top-left-radius: 8px;
+    overflow: hidden;
+    border-top-width: 2px;
+    border-left-width: 0;
+    border-right-width: 0;
+    border-bottom-width: 0;
+    border-top-color: #f60334;
+    border-style: solid;
 }
 
 .chatbox__bottom__link-social{
     display: flex;
     align-items: center;
-    font-size: 1.4rem;
-    padding: 4px 8px;
-    background-color: #1a1a1a;
+    font-size: 1.2rem;
+    padding: 4px 22px;
+    background-color: #303030;
+}
+
+.chatbox__bottom__link-social__mess{
+    text-decoration: none;
+    cursor: pointer;
 }
 
 .chatbox__bottom__input{
@@ -136,10 +154,10 @@
 .chatbox__bottom__input input{
     display: flex;
     flex: 9;
-    height: calc(100% - 16px);
-    padding: 0 8px;
-    margin: 0 12px;
-    font-size: 2rem;
+    height: calc(100% - 12px);
+    padding: 0 16px;
+    margin: 0 22px;
+    font-size: 1.6rem;
     color: var(--white-color);
     background-color: #3f3f3f;
     border-radius: 4px;
@@ -152,8 +170,14 @@
     justify-content: center;
     flex: 1;
     font-size: 2rem;
-    height: 100%;
+    height: calc(100% - 12px);
     width: 32px;
-    background-color: #15151562;
+    padding: 0 12px;
+    margin-right: 12px;
+    background-color: #5f5f5f62;
     cursor: pointer;
+    border-radius: 4px;
+}
+.chatbox__bottom__input i:hover {
+    opacity: 0.8;
 }
