--- a/css/truong.css
+++ b/css/truong.css
@@ -113,15 +113,17 @@
     background-color: rgb(22, 22, 22);
 }
 
+/* ==================== MENU ==================== */
 
 .header__inner__menu {
     display: none;
     justify-content: space-between;
     align-items: center;
-    padding: 15px 15px;
+    padding: 0 15px;
 }
 .header__inner__menu i{
     scale: 3;
+    color: white;
 }
 
 /* ==================== ANIMATION ==================== */
