--- a/navigation_css/promotion.css
+++ b/navigation_css/promotion.css
@@ -10,6 +10,14 @@ body{
     background-color: darkgoldenrod;
     margin-top: 68px;
 }
+.app{
+    max-width: 1000px;
+    margin: 0 auto;
+}
+.header{
+    max-width: 1000px;
+    margin: 0 auto;
+}
 .footer{
     width: 100%;
     height: 734px;
@@ -37,4 +45,10 @@ body{
 }
 .container__inner__ntf i:hover{
     color: goldenrod;
+}
+
+/* menu */
+.header__inner__menu i{
+    scale: 2;
+    color: white;
 }
